# 4jo

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  vite.config.ts  wiki
agent/: extract_captions.py  package-lock.json  package.json
agent/src-tauri/: Cargo.toml  tauri.conf.json
agent/src-tauri/capabilities/: default.json
agent/src-tauri/src/: lib.rs  main.rs
backend-ai/: Dockerfile  main.py  requirements.txt
db/: init.sql
frontend/: Dockerfile  index.html  package-lock.json  tsconfig.json
frontend/src/: App.tsx  main.tsx
reverse-proxy/: nginx.conf
src/: index.css
src-tauri/: Cargo.toml
